--- a/index.html
+++ b/index.html
@@ -6,34 +6,51 @@
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+	<link href="https://fonts.googleapis.com/css?family=Orbitron" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
 	<header>
-		<div class="container flex">
-			<nav class="navigation">
-				<ul class="navigation-ul flex">
-					<li class="navigation-li">
-						<a class="navigation-a" href="#">MAIN</a>
-					</li>
-					<li class="navigation-li">
-						<a class="navigation-a" href="#">VIDEOS</a>
-					</li>
-					<li class="navigation-li">
-						<a class="navigation-a" href="#">ABOUT</a>
-					</li>
-					<li class="navigation-li">
-						<a class="navigation-a" href="#">CONTACT</a>
-					</li>
-				</ul>
-				<div class="container2 flex">
-					<a href="#">
-						<img class="heis" src="img/heis.png" alt="image">
-					</a>
-				</div>
-			</nav>
+  <div class="container">
+    <nav>
+      <div class="nav-fostrap">
+        <ul>
+          <li><a href="file:///D:/Geolab%20homework/Breaking-Bad/index.html">Home</a></li>
+          <li><a href="javascript:void(0)">Videos<span class="arrow-down"></span></a>
+            <ul class="dropdown">
+              <li><a href="">Scenes</a></li>
+              <li><a href="">Interviews</a></li>
+              <li><a href="">Filming</a></li>
+            </ul>
+          </li>
+          <li><a href="javascript:void(0)" >About<span class="arrow-down"></span></a>
+            <ul class="dropdown">
+              <li><a href="">Cast</a></li>
+              <li><a href="">Show</a></li>
+            </ul>
+          </li>
+         	 <li><a href="">Contact</a></li>
+        	</ul>
+      </div>
+    </nav>
+    <div class='content'>
+	</div>
+</div>
+</div>
+</header>
+		<div class="container2">
+			<a href="#">
+				<img class="img" src="img/hh.svg" alt="img">
+			</a>
+			<a href="#">
+				<img class="logo" src="img/logo.jpg" alt="img">
+			</a>
+			<a href="#">
+				<img class="heis" src="img/heis.png" alt="image">
+			</a>
 		</div>
-	</header>
 
+ <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+<script>
 </body>
 </html>
