--- a/index.html
+++ b/index.html
@@ -18,9 +18,8 @@
           <li><a href="file:///D:/Geolab%20homework/Breaking-Bad/index.html">Home</a></li>
           <li><a href="javascript:void(0)">Videos<span class="arrow-down"></span></a>
             <ul class="dropdown">
-              <li><a href="">Scenes</a></li>
-              <li><a href="">Interviews</a></li>
-              <li><a href="">Filming</a></li>
+              <li><a href="file:///D:/Geolab%20homework/Breaking-Bad/index2.html" target="_blank">Scenes</a></li>
+              <li><a href="file:///D:/Geolab%20homework/Breaking-Bad/index3.html" target="_blank">Filming</a></li>
             </ul>
           </li>
           <li><a href="javascript:void(0)" >About<span class="arrow-down"></span></a>
