--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           </li>
           <li><a href="javascript:void(0)" >About<span class="arrow-down"></span></a>
             <ul class="dropdown">
-              <li><a href="">Cast</a></li>
+              <li><a href="file:///D:/Geolab%20homework/Breaking-Bad/index4.html">Cast</a></li>
               <li><a href="">Show</a></li>
             </ul>
           </li>
