--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
           </li>
           <li><a href="javascript:void(0)" >About<span class="arrow-down"></span></a>
             <ul class="dropdown">
-              <li><a href="file:///D:/Geolab%20homework/Breaking-Bad/index4.html">Cast</a></li>
-              <li><a href="">Show</a></li>
+              <li><a href="file:///D:/Geolab%20homework/Breaking-Bad/index4.html" target="_blank">Cast</a></li>
+              <li><a href="" target="_blank">Show</a></li>
             </ul>
           </li>
-         	 <li><a href="">Contact</a></li>
+         	 <li><a href="" target="_blank">Contact</a></li>
         	</ul>
       </div>
     </nav>
