--- a/index3.html
+++ b/index3.html
@@ -18,7 +18,7 @@
 			<iframe width="480" height="300" src="https://www.youtube.com/embed/EARSsTfEElU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 		</div>
 		<div class="video-box3">
-			<iframe width="480" height="300" src="https://www.youtube.com/embed/EK0jayJR_RU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+			<iframe width="480" height="300" src="https://www.youtube.com/embed/BmV7oeY_ULs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 		</div>
 	</div>
 
