--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
               <li><a href="file:///D:/Geolab%20homework/Breaking-Bad/index5.html" target="_blank">Show</a></li>
             </ul>
           </li>
-         	 <li><a href="" target="_blank">Contact</a></li>
+         	 <li><a href="file:///D:/Geolab%20homework/Breaking-Bad/index6.html" target="_blank">Contact</a></li>
         	</ul>
       </div>
     </nav>
