--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	<title>Breaking Bad</title>
 	<meta charset="utf-8">
@@ -35,7 +35,6 @@
     <div class='content'>
 	</div>
 </div>
-</div>
 </header>
 		<div class="container2">
 			<a href="#">
@@ -50,6 +49,6 @@
 		</div>
 
  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
-<script>
+
 </body>
 </html>
