--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-	<header>
+  <audio class="audio" controls autoplay>
+      <source src="img/intro.ogg" type="audio/ogg">
+      <source src="img/intro.mp3" type="audio/mpeg">
+  </audio>
+<header>
   <div class="container">
     <nav>
       <div class="nav-fostrap">
@@ -47,7 +51,6 @@
 				<img class="heis" src="img/heis.png" alt="image">
 			</a>
 		</div>
-
  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
 
 </body>
