--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 </head>
 <body>
   <audio class="audio" controls autoplay>
-      <source src="img/intro.ogg" type="audio/ogg">
       <source src="img/intro.mp3" type="audio/mpeg">
   </audio>
 <header>
@@ -22,17 +21,17 @@
           <li><a href="D:/Geolab%20homework/Breaking-Bad/index.html">Home</a></li>
           <li><a href="javascript:void(0)">Videos<span class="arrow-down"></span></a>
             <ul class="dropdown">
-              <li><a href="D:/Geolab%20homework/Breaking-Bad/index2.html" target="_blank">Scenes</a></li>
-              <li><a href="D:/Geolab%20homework/Breaking-Bad/index3.html" target="_blank">Filming</a></li>
+              <li><a href="file:///D:/Geolab%20homework/Breaking-Bad/index2.html#" target="_blank">Scenes</a></li>
+              <li><a href="file:///D:/Geolab%20homework/Breaking-Bad/index3.html#" target="_blank">Filming</a></li>
             </ul>
           </li>
           <li><a href="javascript:void(0)" >About<span class="arrow-down"></span></a>
             <ul class="dropdown">
-              <li><a href="D:/Geolab%20homework/Breaking-Bad/index4.html" target="_blank">Cast</a></li>
-              <li><a href="D:/Geolab%20homework/Breaking-Bad/index5.html" target="_blank">Show</a></li>
+              <li><a href="file:///D:/Geolab%20homework/Breaking-Bad/index4.html#" target="_blank">Cast</a></li>
+              <li><a href="file:///D:/Geolab%20homework/Breaking-Bad/index5.html#" target="_blank">Show</a></li>
             </ul>
           </li>
-         	 <li><a href="D:/Geolab%20homework/Breaking-Bad/index6.html" target="_blank">Contact</a></li>
+         	    <li><a href="D:/Geolab%20homework/Breaking-Bad/index6.html" target="_blank">Contact</a></li>
         	</ul>
       </div>
     </nav>
