--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <li><a href="javascript:void(0)">Videos<span class="arrow-down"></span></a>
             <ul class="dropdown">
               <li><a href="index2.html" target="_blank">Scenes</a></li>
-              <li><a href="file:///D:/Geolab%20homework/Breaking-Bad/index3.html#" target="_blank">Filming</a></li>
+              <li><a href="index3.html" target="_blank">Filming</a></li>
             </ul>
           </li>
           <li><a href="javascript:void(0)" >About<span class="arrow-down"></span></a>
